<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherRegisterActivity">

    <ImageView
        android:id="@+id/vit_logo"
        android:layout_width="335dp"
        android:layout_height="315dp"
        android:contentDescription="@string/vit_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vitlogo" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardBackgroundColor="@color/cardColor"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vit_logo"
        app:layout_constraintVertical_bias="0.73" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@color/cardview_light_background"
                android:elevation="15dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:autofillHints=""
                android:background="@color/cardview_light_background"
                android:elevation="15dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:background="@color/cardview_light_background"
                android:elevation="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:background="@color/cardview_light_background"
                android:elevation="15dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_button"
                android:text="@string/register"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>